# robot_kf

./: README.md
my_bag/: metadata.yaml  my_bag.db3  odom_gt.csv  odom_kf.csv  odom_noisy.csv  plot_trajectory.py  plot_xy.py
robot_kf/: CMakeLists.txt  package.xml
robot_kf/include/robot_kf/: kalman.hpp
robot_kf/launch/: tb3_sim.launch.py
robot_kf/src/: kalman_odom_node.cpp  noisy_odom_node.cpp
